# zig-capabilities-example

./: README.md
capabilities/: .tute_config  CMakeLists.txt  README.md
capabilities/src/: main.c  zig_helper.zig
capabilities/src/zig-cache/o/0e16e93464a415a80b74059310fd736f/: cimport.h  cimport.h.d
capabilities/src/zig-cache/o/5ebf8f626f59112c0cd234a2d6a273af/: cimport.zig
capabilities/src/zig-cache/o/8fda6e81f399ffd09ebf5d6ec1db7741/: cimport.h  cimport.h.d
capabilities/src/zig-cache/o/9fbf04e61161df25d3af1769390c3e51/: cimport.zig
capabilities/src/zig-cache/o/ce1e11a6046737e64246f4fcd808c0e0/: cimport.h  cimport.h.d
capabilities_build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  capabilities  cmake_install.cmake  input_files  launch_gdb  output_files  rules.ninja  simulate
capabilities_build/elfloader/: cmake_install.cmake
capabilities_build/images/: kernel-x86_64-pc99
capabilities_build/kernel/: cmake_install.cmake  kernel.elf  kernel_all.c
capabilities_build/libsel4/: cmake_install.cmake
capabilities_build/libsel4tutorials/: cmake_install.cmake
capabilities_build/musllibc/: cmake_install.cmake
capabilities_build/seL4_libs/: cmake_install.cmake
capabilities_build/sel4runtime/: cmake_install.cmake
capabilities_build/util_libs/: cmake_install.cmake
hello-word/: CMakeLists.txt
hello-word/src/: main.c  zig_helper.zig
hello-word_build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  gcc.cmake  hello-world  input_files  output_files  rules.ninja  simulate
hello-word_build/kernel/: kernel.elf  (+2 more)
(+87 files in other folders)
